pkcs11-helper
Copyright (c) 2005-2022 Alon Bar-Lev <alon.barlev@gmail.com>

????-??-?? - Version 1.31.0
* threading: fix mutex handling for cond_wait, thanks to Gleb Popov.
* mbed: initialize certificate early using mbedtls_x509_crt_init.

2023-12-01 - Version 1.30.0
* core: add dynamic loader provider attribute, thanks to Marc Becker.
* openssl: support DSA in libressl-3.5.0, thanks to Fabrice Fontaine.
* openssl: fix openssl_ex_data_dup prototype, thanks to Sam James for
  reporting.

2022-04-21 - Version 1.29.0

* build: do not fail if slot evnets are disabled, thanks to Fabrice Fontaine.
* core: do not assume standard objects supported by provider.
* openssl: set back key into EVP for openssl-3 to work, thanks to apollo13.

2021-12-31 - Version 1.28

 * build: openssl: remove RSA_SSLV23_PADDING constant usage due to openssl-3
   compatibility, thanks to t0b3.
 * build: nss: use nss pkcs11.h, thanks to Fabrice Fontaine.
 * build: windows: checksum in PE, thanks to Simon Rozman.
 * build: windows: support openssl-1.1.1, thanks to Lev Stipakov.
 * mbed: require >=mbedtls-2, mbed dropped polarssl compatibility,
   thanks to Uipko Berghuis
 * certificate: add methods accept full mechanism, thanks to Selva Nair.
 * core: load provider library as private.
 * core: add pkcs11h_getProperty, pkcs11h_setProperty to support adding
   properties without breaking API.
 * core: add pkcs11h_initializeProvider, pkcs11h_registerProvider,
   pkcs11h_setProviderProperty, pkcs11h_setProviderPropertyByName to
   support adding properties without breaking API thanks to Михалицын Петр.
 * core: add initialization arguments property, thanks for Михалицын Петр.
 * core: add PKCS11H_PROVIDER_PROPERTY_PROVIDER_DESTRUCT_HOOK.
 * session: respect login required token flag.
 * certificate: respect always authenticate flag.

2020-11-17 - Version 1.27

 * core: handle PIN expiration after C_Login as C_Login may take a while