@@ -415,6 +415,11 @@ pkcs11h_certificate_deserializeCertificateId (
 
 	certificate_id->attrCKA_ID_size = strlen (p)/2;
 
+	if (certificate_id->attrCKA_ID_size == 0) {
+		rv = CKR_ATTRIBUTE_VALUE_INVALID;
+		goto cleanup;
+	}
+
 	if (
 		(rv = _pkcs11h_mem_malloc (
 			(void *)&certificate_id->attrCKA_ID,
